--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,6 +21,7 @@ book:
     - part: 数据分析
       chapters:
         - grouped-data-statistical-analysis-and-visualization.qmd
+        - grouped-data-analysis-in-action.qmd
         - transcriptomics-data-analysis-and-visualization.qmd
         - microbiome-data-analysis-and-visualization.qmd
     - part: 人工智能
