--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,8 @@ book:
       chapters:
         - reproducible-data-analysis-environment.qmd
         - linux-shell.qmd
+        - r-basic.qmd
+        - python-basic.qmd
         - modern-tools-and-outlook.qmd
     - part: 数据分析
       chapters:
