add ggplot2 cheatsheet

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,6 +44,7 @@ book:
     - markdown-syntax.qmd
     - write-math-equation.qmd
     - technical-writing-with-quarto.qmd
+    - ggplot2-cheatsheet.qmd
 
 bibliography: references.bib
 
