add dplyr cheatsheet

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -45,6 +45,7 @@ book:
     - write-math-equation.qmd
     - technical-writing-with-quarto.qmd
     - ggplot2-cheatsheet.qmd
+    - dplyr-cheatsheet.qmd
 
 bibliography: references.bib
 
