--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,13 +21,15 @@ book:
     - part: 环境搭建
       chapters:
         - reproducible-data-analysis-environment.qmd
+        - setup-a-reproducible-environment.qmd
+    - part: 基础知识
+      chapters:
         - linux-shell.qmd
         - r-basic.qmd
         - python-basic.qmd
         - python-vs-r.qmd
         - git-basic.qmd
-        - modern-tool-chain.qmd
-        - setup-a-reproducible-environment.qmd
+        - literate-programming.qmd
     - part: 数据分析
       chapters:
         - grouped-data-analysis.qmd
@@ -35,11 +37,16 @@ book:
         - transcriptomics-data-analysis-and-visualization.qmd
         - transcriptomics-data-analysis-in-action.qmd
         - microbiome-data-analysis-and-visualization.qmd
+    - part: ai-api-call.qmd
+      chapters:
+        - huggingface.qmd
+        - chatanywhere.qmd
+        - bailian.qmd
+        - deepseek.qmd
     - part: 人工智能
       chapters:
         - neural-network-from-scratch.qmd
         - pathogen-identification-with-raman-spectroscopy.qmd
-        - ai-api-application.qmd
         - machine-learning-algorithms-and-implementation.qmd
         - computer-vision-image-analysis.qmd
     - part: 开发协作
@@ -48,9 +55,9 @@ book:
         - r-package-development.qmd      
     - references.qmd
   appendices:
-    - markdown-syntax.qmd
+    - markdown.qmd
     - write-math-equation.qmd
-    - technical-writing-with-quarto.qmd
+    - quarto-cheatsheet.qmd
     - ggplot2-cheatsheet.qmd
     - dplyr-cheatsheet.qmd
 
@@ -72,12 +79,14 @@ format:
               <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   pdf:
     documentclass: scrreprt
+    paper-size: a4
     mermaid-format: png
     extract-media: images
     fig-width: 7
     fig-asp: 0.618
     warning: false
     message: false
+    out-width: 100%
     include-in-header:
           text: |
             \usepackage{ctex}
