--- a/environment.yml
+++ b/environment.yml
@@ -4,27 +4,74 @@ channels:
   - bioconda
   - defaults
 dependencies:
+  - aiohappyeyeballs=2.4.6
+  - aiohttp=3.11.12
+  - aiosignal=1.3.2
+  - annotated-types=0.7.0
+  - anyio=4.8.0
   - appnope=0.1.4
   - asttokens=3.0.0
+  - async-timeout=5.0.1
   - attrs=25.1.0
+  - aws-c-auth=0.8.1
+  - aws-c-cal=0.8.1
+  - aws-c-common=0.10.6
+  - aws-c-compression=0.3.0
+  - aws-c-event-stream=0.5.0
+  - aws-c-http=0.9.2
+  - aws-c-io=0.15.3
+  - aws-c-mqtt=0.11.0
+  - aws-c-s3=0.7.9
+  - aws-c-sdkutils=0.2.2
+  - aws-checksums=0.2.2
+  - aws-crt-cpp=0.29.9
+  - aws-sdk-cpp=1.11.489
+  - azure-core-cpp=1.14.0
+  - azure-identity-cpp=1.10.0
+  - azure-storage-blobs-cpp=12.13.0
+  - azure-storage-common-cpp=12.8.0
+  - azure-storage-files-datalake-cpp=12.12.0
   - brotli=1.1.0
   - brotli-bin=1.1.0
+  - brotli-python=1.1.0
   - bzip2=1.0.8
+  - c-ares=1.34.4
   - ca-certificates=2025.1.31
+  - certifi=2024.12.14
+  - cffi=1.17.1
+  - charset-normalizer=3.4.1
+  - colorama=0.4.6
   - comm=0.2.2
   - contourpy=1.3.1
   - cycler=0.12.1
+  - datasets=3.2.0
   - debugpy=1.8.12
   - decorator=5.1.1
+  - dill=0.3.8
+  - distro=1.9.0
   - exceptiongroup=1.2.2
   - executing=2.1.0
+  - filelock=3.17.0
   - fonttools=4.56.0
   - freetype=2.12.1
+  - frozenlist=1.5.0
+  - gflags=2.2.2
+  - glog=0.7.1
+  - h11=0.14.0
+  - h2=4.2.0
+  - hpack=4.1.0
+  - httpcore=1.0.7
+  - httpx=0.28.1
+  - huggingface_hub=0.28.0
+  - hyperframe=6.1.0
+  - icu=75.1
+  - idna=3.10
   - importlib-metadata=8.6.1
   - importlib_resources=6.5.2
   - ipykernel=6.29.5
   - ipython=8.32.0
   - jedi=0.19.2
+  - jiter=0.8.2
   - joblib=1.4.2
   - jsonschema=4.23.0
   - jsonschema-specifications=2024.10.1
@@ -33,39 +80,69 @@ dependencies:
   - krb5=1.21.3
   - lcms2=2.16
   - lerc=4.0.0
+  - libabseil=20240722.0
+  - libarrow=19.0.0
+  - libarrow-acero=19.0.0
+  - libarrow-dataset=19.0.0
+  - libarrow-substrait=19.0.0
   - libblas=3.9.0
   - libbrotlicommon=1.1.0
   - libbrotlidec=1.1.0
   - libbrotlienc=1.1.0
   - libcblas=3.9.0
+  - libcrc32c=1.1.2
+  - libcurl=8.11.1
   - libcxx=19.1.7
   - libdeflate=1.23
   - libedit=3.1.20250104
+  - libev=4.33
+  - libevent=2.1.12
   - libffi=3.4.2
   - libgfortran=5.0.0
   - libgfortran5=13.2.0
+  - libgoogle-cloud=2.34.0
+  - libgoogle-cloud-storage=2.34.0
+  - libgrpc=1.67.1
+  - libiconv=1.17
   - libjpeg-turbo=3.0.0
   - liblapack=3.9.0
   - liblzma=5.6.4
+  - libnghttp2=1.64.0
   - libopenblas=0.3.28
+  - libopentelemetry-cpp=1.18.0
+  - libopentelemetry-cpp-headers=1.18.0
+  - libparquet=19.0.0
   - libpng=1.6.46
+  - libprotobuf=5.28.3
+  - libre2-11=2024.07.02
+  - libsentencepiece=0.2.0
   - libsodium=1.0.20
   - libsqlite=3.48.0
+  - libssh2=1.11.1
+  - libthrift=0.21.0
   - libtiff=4.7.0
+  - libutf8proc=2.10.0
   - libwebp-base=1.5.0
   - libxcb=1.17.0
+  - libxml2=2.13.5
   - libzlib=1.3.1
   - llvm-openmp=19.1.7
+  - lz4-c=1.10.0
   - matplotlib-base=3.10.0
   - matplotlib-inline=0.1.7
+  - multidict=6.1.0
+  - multiprocess=0.70.16
   - munkres=1.1.4
   - nbclient=0.10.2
   - nbformat=5.10.4
   - ncurses=6.5
   - nest-asyncio=1.6.0
+  - nlohmann_json=3.11.3
   - numpy=2.2.2
+  - openai=1.61.0
   - openjpeg=2.5.3
-  - openssl=3.4.0
+  - openssl=3.4.1
+  - orc=2.0.3
   - packaging=24.2
   - pandas=2.2.3
   - parso=0.8.4
@@ -76,50 +153,77 @@ dependencies:
   - pip=25.0
   - pkgutil-resolve-name=1.3.10
   - platformdirs=4.3.6
+  - prometheus-cpp=1.3.0
   - prompt-toolkit=3.0.50
+  - propcache=0.2.1
   - psutil=6.1.1
   - pthread-stubs=0.4
   - ptyprocess=0.7.0
   - pure_eval=0.2.3
+  - pyarrow=19.0.0
+  - pyarrow-core=19.0.0
+  - pycparser=2.22
+  - pydantic=2.10.6
+  - pydantic-core=2.27.2
   - pygments=2.19.1
   - pyparsing=3.2.1
+  - pysocks=1.7.1
   - python=3.10.16
   - python-dateutil=2.9.0.post0
   - python-fastjsonschema=2.21.1
   - python-tzdata=2025.1
+  - python-xxhash=3.5.0
   - python_abi=3.10
   - pytz=2024.1
   - pyyaml=6.0.2
   - pyzmq=26.2.1
   - qhull=2020.2
+  - re2=2024.07.02
   - readline=8.2
   - referencing=0.36.2
+  - regex=2024.11.6
+  - requests=2.32.3
   - rpds-py=0.22.3
+  - safetensors=0.5.2
   - scikit-learn=1.6.1
   - scipy=1.15.1
   - seaborn=0.13.2
   - seaborn-base=0.13.2
+  - sentencepiece=0.2.0
+  - sentencepiece-python=0.2.0
+  - sentencepiece-spm=0.2.0
   - setuptools=75.8.0
   - six=1.17.0
+  - snappy=1.2.1
+  - sniffio=1.3.1
   - stack_data=0.6.3
   - statsmodels=0.14.4
   - threadpoolctl=3.5.0
   - tk=8.6.13
+  - tokenizers=0.21.0
   - tornado=6.4.2
+  - tqdm=4.67.1
   - traitlets=5.14.3
+  - transformers=4.48.3
+  - typing-extensions=4.12.2
   - typing_extensions=4.12.2
   - tzdata=2025a
   - unicodedata2=16.0.0
+  - urllib3=2.3.0
   - wcwidth=0.2.13
   - wheel=0.45.1
   - xorg-libxau=1.0.12
   - xorg-libxdmcp=1.1.5
+  - xxhash=0.8.2
   - yaml=0.2.5
+  - yarl=1.18.3
   - zeromq=4.3.5
   - zipp=3.21.0
+  - zlib=1.3.1
+  - zstandard=0.23.0
   - zstd=1.5.6
   - pip:
-      - filelock==3.17.0
+      - dashscope==1.22.1
       - fsspec==2025.2.0
       - jinja2==3.1.5
       - kiwisolver==1.4.8
@@ -127,8 +231,10 @@ dependencies:
       - mpmath==1.3.0
       - networkx==3.4.2
       - sympy==1.13.1
+      - timm==1.0.14
       - torch==2.6.0
       - torchaudio==2.6.0
       - torchsummary==1.5.1
       - torchvision==0.21.0
+      - websocket-client==1.8.0
 prefix: /opt/homebrew/anaconda3/envs/data-driven-reproducible-study
