--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,8 @@ jobs:
         uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
-          python-version: 3.9  # 根据需要调整 Python 版本
-          activate-environment: myenv  # 替换为你的 Conda 环境名称
+          python-version: 3.10  # 根据需要调整 Python 版本
+          activate-environment: ata-driven-reproducible-study  # Conda 环境名称
           environment-file: environment.yml  # 如果有环境文件，请指定路径
 
       # 安装 R 和 renv
