--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,8 @@ jobs:
         uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
-          python-version: 3.10  # 根据需要调整 Python 版本
+          miniconda-version: "latest"  # 显式指定 Miniconda 版本
+          python-version: 3.10         # 根据需要调整 Python 版本
           activate-environment: data-driven-reproducible-study  # Conda 环境名称
           environment-file: environment.yml  # 如果有环境文件，请指定路径
 
