--- a/environment.yml
+++ b/environment.yml
@@ -230,11 +230,13 @@ dependencies:
       - markupsafe==3.0.2
       - mpmath==1.3.0
       - networkx==3.4.2
+      - python-graphviz==0.20.3
       - sympy==1.13.1
       - timm==1.0.14
       - torch==2.6.0
       - torchaudio==2.6.0
       - torchsummary==1.5.1
       - torchvision==0.21.0
+      - torchviz==0.0.3
       - websocket-client==1.8.0
 prefix: /opt/homebrew/anaconda3/envs/data-driven-reproducible-study
