--- a/environment.yml
+++ b/environment.yml
@@ -230,7 +230,7 @@ dependencies:
       - markupsafe==3.0.2
       - mpmath==1.3.0
       - networkx==3.4.2
-      - python-graphviz==0.20.3
+      - graphviz==0.20.3
       - sympy==1.13.1
       - timm==1.0.14
       - torch==2.6.0
