--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,11 @@ jobs:
       # 构建 Quarto Book
       - name: Build Quarto Book
         run: quarto render
+        with:
+          activate-environment: data-driven-reproducible-study
+        env:
+          CONDA_DEFAULT_ENV: data-driven-reproducible-study
+
 
       # 部署到 gh-pages 分支
       - name: Deploy to GitHub Pages
