--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Set CONDA_DEFAULT_ENV
         run: |
           echo "CONDA_DEFAULT_ENV=data-driven-reproducible-study" >> $GITHUB_ENV
-          conda activate data-driven-reproducible-study
+          echo "QUARTO_PYTHON=$(which python)" >> $GITHUB_ENV
 
       # 安装 R 和 renv
       - name: Set up R
@@ -54,9 +54,9 @@ jobs:
 
       # 构建 Quarto Book
       - name: Build Quarto Book
-        run: quarto render
-        env:
-          CONDA_DEFAULT_ENV: data-driven-reproducible-study
+        run: |
+          conda activate data-driven-reproducible-study
+          quarto render
 
 
       # 部署到 gh-pages 分支
