--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,9 @@ name: Deploy Quarto Book to gh-pages
 
 on:
   workflow_dispatch:  # 允许手动触发
+  push:
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
@@ -14,6 +17,7 @@ jobs:
         with:
           submodules: recursive  # 确保递归克隆所有子模块
           fetch-depth: 0         # 获取完整的历史记录以支持 renv 和其他工具
+          lfs: true
 
       # 设置 Conda 环境
       - name: Set up Conda
