add packages.bib to bibiliography

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -76,7 +76,7 @@ book:
     - ggplot2-cheatsheet.qmd
     - dplyr-cheatsheet.qmd
 
-bibliography: references.bib
+bibliography: [references.bib, packages.bib]
 
 
 
