--- a/_quarto.yml
+++ b/_quarto.yml
@@ -68,6 +68,9 @@ book:
       chapters:
         - collaboration-with-global-developers.qmd
         - r-package-development.qmd      
+    - part: 问题解答
+      chapters:
+        - FAQ.qmd
     - references.qmd
   appendices:
     - markdown.qmd
