--- a/_quarto.yml
+++ b/_quarto.yml
@@ -88,6 +88,7 @@ bibliography: [references.bib, packages.bib]
 format:
   html:
     theme: cosmo
+    css: custom.css
     fig-width: 7
     fig-asp: 0.618
     fig-align: center
