添加命令行程序章节，替换 Linux Shell 为 CLI，更新文档结构

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,7 +28,7 @@ book:
     - part: 基础知识
       chapters:
         - literate-programming.qmd
-        - linux-shell.qmd
+        - cli.qmd
         - r-basic.qmd
         - python-basic.qmd
         - python-vs-r.qmd
